<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textDelPictograma"
        android:id="@+id/textView"
        android:layout_gravity="left|center_vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/textoBotonSi"
            android:id="@+id/btnSi"
            android:layout_gravity="center_horizontal|top"
            android:layout_weight="2" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/textoBotonNo"
            android:id="@+id/btnNO"
            android:layout_weight="2" />
    </LinearLayout>

</LinearLayout>