<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/EstiloGeneralPicCom"
    android:layout_width="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imgContact"
        android:src="@drawable/avatar"
        android:contentDescription="@string/pref_data_contact_avatar"
        android:layout_margin="10dp"
        android:background="@drawable/pic_border" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|left|top"
        android:layout_marginLeft="5dp"
        android:layout_weight="1"
        android:background="#50ffffff"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pref_data_contact_name"
                android:id="@+id/TitleinfoCntName"
                android:layout_marginLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pref_data_contact_year_birth"
                android:id="@+id/TitleinfoCntYearBirth"
                android:layout_marginLeft="10dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/infoCntName"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"
                android:textColor="#2e5ed6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/infoCntYearBirth"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="#2e5ed6" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pref_data_contact_address"
                android:id="@+id/textView2"
                android:layout_marginLeft="5dp" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/infoCntAddress"
                android:layout_marginLeft="5dp"
                android:layout_span="2"
                android:textStyle="bold"
                android:textColor="#2e5ed6" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pref_data_contact_country"
                android:id="@+id/textView3"
                android:layout_marginLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pref_data_contact_cod_post"
                android:id="@+id/textView"
                android:layout_marginLeft="10dp" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/infoCntCountry"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"
                android:textColor="#2e5ed6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/infoCntCodPos"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="#2e5ed6" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pref_data_contact_name_mother"
                android:id="@+id/textView4"
                android:layout_marginLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pref_data_contact_tlf_mother"
                android:id="@+id/textView5"
                android:layout_marginLeft="10dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/infoCntMother"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"
                android:textColor="#2e5ed6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/infoCntTlfMother"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="#2e5ed6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pref_data_contact_name_father"
                android:id="@+id/textView6"
                android:layout_marginLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pref_data_contact_tlf_father"
                android:id="@+id/textView7"
                android:layout_marginLeft="10dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/infoCntFather"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"
                android:textColor="#2e5ed6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/infoCntTlfFather"
                android:layout_marginLeft="10dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pref_data_contact_tlf_other"
                android:id="@+id/textView8"
                android:layout_marginLeft="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/infoCntOtherTlf"
                android:layout_marginLeft="5dp"
                android:layout_span="2"
                android:textStyle="bold"
                android:textColor="#2e5ed6" />
        </TableRow>

    </TableLayout>

</LinearLayout>